hosting a static webpage

--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
-<<<<<<< HEAD
-<p>Welcome to the channel</p>
-=======
-<h1> MaxiPy Youtube channel for Productivity </h1>
->>>>>>> 919840ba563d611c1c642e0fa80dcdd4e930aa87
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>MaxiPy Git Tutorials</title>
+    <link rel="stylesheet" href="file.css">
+	<link rel="icon" type="image/x-icon" href="assets/MaxiPy Logo.png">
+</head>
+
+<body>
+    <header>
+        <h1>MaxiPy</h1>
+        <img src="assets/MaxiPy Logo.png" alt="MaxiPy logo">
+    </header>
+
+	<div class="container">
+		<div class="btn"><a href="#"> <strong>Instagram</strong></a></div>
+		<div class="btn"><a href="#" ><strong>TikTok</strong></a></div>
+				<div class="btn"><a href="#" ><strong>YouTube</strong></a></div>
+
+	</div>		
+</body>
